--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,11 @@
     "cygni": "file:..",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
-    "react-country-flag": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "react-world-flags": "^1.4.0"
   },
   "browserslist": {
     "production": [
