--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "BackendMashup",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
+    "start": "set NODE_ENV=production&&node index.js",
     "build": "npm run build --prefix client",
     "client-install": "npm install --prefix client",
-    "dev": "concurrently \"nodemon .\" \"npm start --prefix client\""
+    "dev": "concurrently \"nodemon .\" \"npm run dev --prefix client\""
   },
   "keywords": [],
   "author": "",
