--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "node",
+    "start": "NODE_ENV=production node .",
     "test": "mocha --timeout 5000"
   },
   "keywords": [],
